# optimalpath

./: .gitignore  EXPERIMENTAL_DESIGN.md  EXPERIMENT_WALKTHROUGH.md  INITIAL_PATH_DERIVATION.md  README.md  RESULTS_SUMMARY.md  STRUCTURE.txt  TODO.md  car.py  compare_camera_pose.py  compare_two_methods.py  coverage_greedy.py  generate_initial_orbit.py  generate_optimal_path.py  generate_test_objects.py  pbnbv_paper.py  pbnbv_path.py  realtest_pbnbv_path.py  run_fair_comparison.py  run_ground_first_comparison.py  simulate_building_reconstruction.py  simulate_building_with_real_data.py  test_azimuth_methods.py  visualize_all_altitudes.py  visualize_mast3r_paths.py  visualize_optimal_path.py  visualize_paths.py  visualize_pbnbv_coverage.py  visualize_pbnbv_paper.py  visualize_truth.py
analysis/: analyze_step1.py  realtest_3d_interactive.py  realtest_camera_range.py  realtest_optimal_path.py  realtest_pbnbv_only.py  unknown_object_simulation.py  view_clean.py  view_trajectory.py  visualize_two_initial_paths.py
archive/: note.txt  simple.py
config/: airsim_building_simulation.py  airsim_orbit_two_altitudes.py  airsim_settings.json
docs/: FINAL_CONCLUSION.md  FINAL_EXPERIMENTAL_DESIGN.md  GREEDY_EXPLANATION.md  README.md
drone_runner_cpp/: README.md
drone_runner_cpp/pb_nbv/drone_runner/: CMakeLists.txt  package.xml
drone_runner_cpp/pb_nbv/drone_runner/src/: drone_runner_node.cpp
drone_runner_cpp/pb_nbv_minimal/drone_runner/: CMakeLists.txt
drone_runner_cpp/pb_nbv_minimal/drone_runner/config/: config_drone.json
drone_runner_cpp/pb_nbv_minimal/drone_runner/src/: drone_runner_node.cpp
real_test/: airsim_gt_pts.npz  ground_first_pts_normals.npz  manifest.json  real_test_pts_normals_clean.npz  real_test_pts_normals_orig.npz  real_test_pts_vis.npz
results/: README.md  bspline_smoothed_path.json  building_visualization.html  building_viz_improved.html  greedy_vs_pbnbv_final.html  index.html  pbnbv_3m1_path.json  pbnbv_3m1_path_v2.json  pbnbv_3m1_path_v3_tilt45.json  pbnbv_3m1_path_v4_fixedalt1.json  pbnbv_constrained_path.json  pbnbv_dist_weighted_path.json  pbnbv_ellipsoid_path.json  pbnbv_nocam_constrained_path.json  pbnbv_nocam_path.json  pbnbv_nocam_soft_v2_path.json  pbnbv_orbit45_constrained_path.json  pbnbv_orbit_constrained_path.json  (+34 more)
(+344 files in other folders)
